execution_mpi_local.txt
honeypot@honeypot:/mnt/host/x/file/Projects/CUDA-MPI MatMul Engine$ make mpi
mpicc -O2 -Wall -Wextra -std=c99 \
        src/mpi/distributed.c src/core/matrix.c src/core/timer.c src/cpu/sequential.c \
        -o build/matmul_mpi -lm
src/core/timer.c: In function ‘timer_get_ms’:
src/core/timer.c:19:23: error: storage size of ‘ts’ isn’t known
   19 |       struct timespec ts;
      |                       ^~
src/core/timer.c:20:7: warning: implicit declaration of function ‘clock_gettime’ [-Wimplicit-function-declaration]
   20 |       clock_gettime(CLOCK_MONOTONIC, &ts);
      |       ^~~~~~~~~~~~~
src/core/timer.c:20:21: error: ‘CLOCK_MONOTONIC’ undeclared (first use in this function)
   20 |       clock_gettime(CLOCK_MONOTONIC, &ts);
      |                     ^~~~~~~~~~~~~~~
src/core/timer.c:20:21: note: each undeclared identifier is reported only once for each function it appears in
src/core/timer.c:19:23: warning: unused variable ‘ts’ [-Wunused-variable]
   19 |       struct timespec ts;
      |                       ^~
src/core/timer.c:22:3: warning: control reaches end of non-void function [-Wreturn-type]
   22 |   }
      |   ^
make: *** [Makefile:98: mpi] Error 1
honeypot@honeypot:/mnt/host/x/file/Projects/CUDA-MPI MatMul Engine$ make mpi
mpicc -O2 -Wall -Wextra -std=c99 \
        src/mpi/distributed.c src/core/matrix.c src/core/timer.c src/cpu/sequential.c \
        -o build/matmul_mpi -lm
[BUILD] build/matmul_mpi — MPI distributed
honeypot@honeypot:/mnt/host/x/file/Projects/CUDA-MPI MatMul Engine$ mpirun -np 1 ./build/matmul_mpi 512
[MPI] Matrix size: 512×512
[MPI] Number of processes: 1
╔══════════════════════════════════════════╗
║  MPI Distributed (1 processes)           ║
╠══════════════════════════════════════════╣
║  Matrix Size   :  512 ×  512             ║
║  Total Time    :    253.552 ms            ║
║  Compute Time  :    251.573 ms            ║
║  Comm Time     :      1.977 ms            ║
║  GFLOPS        :     1.0587               ║
║  Speedup vs CPU:       0.98x              ║
║  Efficiency    :      98.44%              ║
║  Verified      : PASS ✓                     ║
╚══════════════════════════════════════════╝
CSV,mpi-1,512,253.552,1.0587,PASS
honeypot@honeypot:/mnt/host/x/file/Projects/CUDA-MPI MatMul Engine$ mpirun -np 2 ./build/matmul_mpi 512
[MPI] Matrix size: 512×512
[MPI] Number of processes: 2
╔══════════════════════════════════════════╗
║  MPI Distributed (2 processes)           ║
╠══════════════════════════════════════════╣
║  Matrix Size   :  512 ×  512             ║
║  Total Time    :    154.403 ms            ║
║  Compute Time  :    150.781 ms            ║
║  Comm Time     :      3.617 ms            ║
║  GFLOPS        :     1.7385               ║
║  Speedup vs CPU:       1.84x              ║
║  Efficiency    :      91.78%              ║
║  Verified      : PASS ✓                     ║
╚══════════════════════════════════════════╝
CSV,mpi-2,512,154.403,1.7385,PASS
honeypot@honeypot:/mnt/host/x/file/Projects/CUDA-MPI MatMul Engine$ mpirun --allow-run-as-root -np 4 ./build/matmul_mpi 512
--------------------------------------------------------------------------
There are not enough slots available in the system to satisfy the 4
slots that were requested by the application:

  ./build/matmul_mpi

Either request fewer slots for your application, or make more slots
available for use.

A "slot" is the Open MPI term for an allocatable unit where we can
launch a process.  The number of slots available are defined by the
environment in which Open MPI processes are run:

  1. Hostfile, via "slots=N" clauses (N defaults to number of
     processor cores if not provided)
  2. The --host command line parameter, via a ":N" suffix on the
     hostname (N defaults to 1 if not provided)
  3. Resource manager (e.g., SLURM, PBS/Torque, LSF, etc.)
  4. If none of a hostfile, the --host command line parameter, or an
     RM is present, Open MPI defaults to the number of processor cores

In all the above cases, if you want Open MPI to default to the number
of hardware threads instead of the number of processor cores, use the
--use-hwthread-cpus option.

Alternatively, you can use the --oversubscribe option to ignore the
number of available slots when deciding the number of processes to
launch.
--------------------------------------------------------------------------
honeypot@honeypot:/mnt/host/x/file/Projects/CUDA-MPI MatMul Engine$ nproc
4
honeypot@honeypot:/mnt/host/x/file/Projects/CUDA-MPI MatMul Engine$ mpirun --allow-run-as-root --oversubscribe -np 4 ./build/matmul_mpi 512
[MPI] Matrix size: 512×512
[MPI] Number of processes: 4
╔══════════════════════════════════════════╗
║  MPI Distributed (4 processes)           ║
╠══════════════════════════════════════════╣
║  Matrix Size   :  512 ×  512             ║
║  Total Time    :    139.103 ms            ║
║  Compute Time  :    131.041 ms            ║
║  Comm Time     :      8.030 ms            ║
║  GFLOPS        :     1.9298               ║
║  Speedup vs CPU:       2.04x              ║
║  Efficiency    :      50.89%              ║
║  Verified      : PASS ✓                     ║
╚══════════════════════════════════════════╝
CSV,mpi-4,512,139.103,1.9298,PASS
honeypot@honeypot:/mnt/host/x/file/Projects/CUDA-MPI MatMul Engine$